--- a/nlp/sentiment_analysis.ipynb
+++ b/nlp/sentiment_analysis.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -27,23 +13,41 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lmL59yYjnUXb"
+      },
+      "outputs": [],
       "source": [
         "from transformers  import AutoModelForSequenceClassification\n",
-        "from transformers  import TFAutoModelForSequenceClassification\n",
         "from transformers  import AutoTokenizer, AutoConfig\n",
         "from scipy.special import softmax\n",
         "\n",
         "import numpy  as np\n",
         "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "lmL59yYjnUXb"
-      },
-      "execution_count": 14,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vZeqR7FzosQa",
+        "outputId": "298ecef8-3301-40f6-d960-5ffe517a662d"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Some weights of the model checkpoint at cardiffnlp/twitter-roberta-base-sentiment-latest were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+            "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+            "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+          ]
+        }
+      ],
       "source": [
         "MODEL     = f\"cardiffnlp/twitter-roberta-base-sentiment-latest\"\n",
         "tokenizer = AutoTokenizer.from_pretrained(MODEL)\n",
@@ -59,33 +63,11 @@
         "    ranking = np.argsort(scores)[::-1]\n",
         "    labels_and_scores = {model.config.id2label[i]: scores[i] for i in range(scores.shape[0])}\n",
         "    return labels_and_scores"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vZeqR7FzosQa",
-        "outputId": "298ecef8-3301-40f6-d960-5ffe517a662d"
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Some weights of the model checkpoint at cardiffnlp/twitter-roberta-base-sentiment-latest were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
-            "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-            "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "tweets_df = pd.read_csv(\"tweets.txt\")\n",
-        "tweets_df.head()"
-      ],
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -94,19 +76,14 @@
         "id": "UtLT1_wXo6dn",
         "outputId": "5af8fec3-c839-4d4b-88a2-d64ca2b49130"
       },
-      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "                                               tweet\n",
-              "0  🔥ca kkk grand wizard 🔥 endorses @hillaryclinto...\n",
-              "1  an open letter to trump voters from his top st...\n",
-              "2  america is a nation of second chances —@potus ...\n",
-              "3  brandon marshall visits and offers advice, sup...\n",
-              "4  rip elly may clampett: so sad to learn #beverl..."
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "summary": "{\n  \"name\": \"tweets_df\",\n  \"rows\": 2139,\n  \"fields\": [\n    {\n      \"column\": \"tweet\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          \"alert! islam taught in tennessee schools URL #wakeupamerica #tcot #wethepeople #pjnet #ccot URL\",\n          \"photo: dogs of canadian reservist killed at national war memorial wait for him to return home URL URL\",\n          \"surprise surprise, @shaq. on @jimmykimmellive, the lakers icon learned he'd be honored w/ a staples center statue. URL\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+              "type": "dataframe",
+              "variable_name": "tweets_df"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-34bc1a19-2bc0-4ad5-a15d-541e2a8907b3\" class=\"colab-df-container\">\n",
@@ -365,30 +342,28 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "tweets_df",
-              "summary": "{\n  \"name\": \"tweets_df\",\n  \"rows\": 2139,\n  \"fields\": [\n    {\n      \"column\": \"tweet\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          \"alert! islam taught in tennessee schools URL #wakeupamerica #tcot #wethepeople #pjnet #ccot URL\",\n          \"photo: dogs of canadian reservist killed at national war memorial wait for him to return home URL URL\",\n          \"surprise surprise, @shaq. on @jimmykimmellive, the lakers icon learned he'd be honored w/ a staples center statue. URL\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+            "text/plain": [
+              "                                               tweet\n",
+              "0  🔥ca kkk grand wizard 🔥 endorses @hillaryclinto...\n",
+              "1  an open letter to trump voters from his top st...\n",
+              "2  america is a nation of second chances —@potus ...\n",
+              "3  brandon marshall visits and offers advice, sup...\n",
+              "4  rip elly may clampett: so sad to learn #beverl..."
+            ]
           },
+          "execution_count": 23,
           "metadata": {},
-          "execution_count": 23
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "tweets_df = pd.read_csv(\"tweets.txt\")\n",
+        "tweets_df.head()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "tweets_df[\"sentiment_scores\"] = tweets_df['tweet'].apply(analyze_sentiment)\n",
-        "\n",
-        "sentiment_df = pd.DataFrame(tweets_df[\"sentiment_scores\"].tolist())\n",
-        "\n",
-        "tweets_df = pd.concat([tweets_df, sentiment_df], axis=1)\n",
-        "\n",
-        "tweets_df.drop(columns=[\"sentiment_scores\"], inplace=True)\n",
-        "\n",
-        "tweets_df"
-      ],
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -397,40 +372,14 @@
         "id": "MUVfeAPxrA-M",
         "outputId": "9bd0ea41-a482-4b7e-fabf-b49227e54937"
       },
-      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "                                                  tweet  negative   neutral  \\\n",
-              "0     🔥ca kkk grand wizard 🔥 endorses @hillaryclinto...  0.090045  0.789549   \n",
-              "1     an open letter to trump voters from his top st...  0.023218  0.926134   \n",
-              "2     america is a nation of second chances —@potus ...  0.011463  0.704160   \n",
-              "3     brandon marshall visits and offers advice, sup...  0.011214  0.905191   \n",
-              "4     rip elly may clampett: so sad to learn #beverl...  0.706785  0.271872   \n",
-              "...                                                 ...       ...       ...   \n",
-              "2134  watch: tommy chong made a pro-bernie sanders v...  0.042835  0.877819   \n",
-              "2135  jeb bush campaign kicks off 3-state farewell t...  0.029453  0.922311   \n",
-              "2136  breaking: live coverage of hostage situation u...  0.139047  0.844501   \n",
-              "2137  this network of tunnels is from the stone age ...  0.411801  0.575136   \n",
-              "2138  top north korean diplomat who disappeared from...  0.069559  0.912705   \n",
-              "\n",
-              "      positive  \n",
-              "0     0.120406  \n",
-              "1     0.050648  \n",
-              "2     0.284377  \n",
-              "3     0.083596  \n",
-              "4     0.021342  \n",
-              "...        ...  \n",
-              "2134  0.079347  \n",
-              "2135  0.048235  \n",
-              "2136  0.016452  \n",
-              "2137  0.013063  \n",
-              "2138  0.017737  \n",
-              "\n",
-              "[2139 rows x 4 columns]"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "summary": "{\n  \"name\": \"tweets_df\",\n  \"rows\": 2139,\n  \"fields\": [\n    {\n      \"column\": \"tweet\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          \"alert! islam taught in tennessee schools URL #wakeupamerica #tcot #wethepeople #pjnet #ccot URL\",\n          \"photo: dogs of canadian reservist killed at national war memorial wait for him to return home URL URL\",\n          \"surprise surprise, @shaq. on @jimmykimmellive, the lakers icon learned he'd be honored w/ a staples center statue. URL\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"negative\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          0.1120472326874733,\n          0.7262220978736877,\n          0.0027891111094504595\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"neutral\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          0.84889817237854,\n          0.26589691638946533,\n          0.12090441584587097\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"positive\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          0.03905458003282547,\n          0.007880976423621178,\n          0.876306414604187\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+              "type": "dataframe",
+              "variable_name": "tweets_df"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-4f7281f5-67f1-4102-b747-919b670c405b\" class=\"colab-df-container\">\n",
@@ -805,27 +754,77 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "tweets_df",
-              "summary": "{\n  \"name\": \"tweets_df\",\n  \"rows\": 2139,\n  \"fields\": [\n    {\n      \"column\": \"tweet\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          \"alert! islam taught in tennessee schools URL #wakeupamerica #tcot #wethepeople #pjnet #ccot URL\",\n          \"photo: dogs of canadian reservist killed at national war memorial wait for him to return home URL URL\",\n          \"surprise surprise, @shaq. on @jimmykimmellive, the lakers icon learned he'd be honored w/ a staples center statue. URL\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"negative\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          0.1120472326874733,\n          0.7262220978736877,\n          0.0027891111094504595\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"neutral\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          0.84889817237854,\n          0.26589691638946533,\n          0.12090441584587097\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"positive\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 2019,\n        \"samples\": [\n          0.03905458003282547,\n          0.007880976423621178,\n          0.876306414604187\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+            "text/plain": [
+              "                                                  tweet  negative   neutral  \\\n",
+              "0     🔥ca kkk grand wizard 🔥 endorses @hillaryclinto...  0.090045  0.789549   \n",
+              "1     an open letter to trump voters from his top st...  0.023218  0.926134   \n",
+              "2     america is a nation of second chances —@potus ...  0.011463  0.704160   \n",
+              "3     brandon marshall visits and offers advice, sup...  0.011214  0.905191   \n",
+              "4     rip elly may clampett: so sad to learn #beverl...  0.706785  0.271872   \n",
+              "...                                                 ...       ...       ...   \n",
+              "2134  watch: tommy chong made a pro-bernie sanders v...  0.042835  0.877819   \n",
+              "2135  jeb bush campaign kicks off 3-state farewell t...  0.029453  0.922311   \n",
+              "2136  breaking: live coverage of hostage situation u...  0.139047  0.844501   \n",
+              "2137  this network of tunnels is from the stone age ...  0.411801  0.575136   \n",
+              "2138  top north korean diplomat who disappeared from...  0.069559  0.912705   \n",
+              "\n",
+              "      positive  \n",
+              "0     0.120406  \n",
+              "1     0.050648  \n",
+              "2     0.284377  \n",
+              "3     0.083596  \n",
+              "4     0.021342  \n",
+              "...        ...  \n",
+              "2134  0.079347  \n",
+              "2135  0.048235  \n",
+              "2136  0.016452  \n",
+              "2137  0.013063  \n",
+              "2138  0.017737  \n",
+              "\n",
+              "[2139 rows x 4 columns]"
+            ]
           },
+          "execution_count": 25,
           "metadata": {},
-          "execution_count": 25
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "tweets_df[\"sentiment_scores\"] = tweets_df['tweet'].apply(analyze_sentiment)\n",
+        "\n",
+        "sentiment_df = pd.DataFrame(tweets_df[\"sentiment_scores\"].tolist())\n",
+        "\n",
+        "tweets_df = pd.concat([tweets_df, sentiment_df], axis=1)\n",
+        "\n",
+        "tweets_df.drop(columns=[\"sentiment_scores\"], inplace=True)\n",
+        "\n",
+        "tweets_df"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "tweets_df.to_csv(\"sentiment_analysis_results.csv\", index=False)"
-      ],
+      "execution_count": 26,
       "metadata": {
         "id": "kgzzjJ8irLS-"
       },
-      "execution_count": 26,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "tweets_df.to_csv(\"sentiment_analysis_results.csv\", index=False)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
